--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/_GridViewPartial_depreciacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/_GridViewPartial_depreciacion.cshtml
@@ -80,7 +80,7 @@
         settings.Columns.Add("IdDepreciacion","ID").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "";
+            column.FieldName = "Fecha_Depreciacion";
             column.Caption = "Fecha";
             column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
@@ -92,7 +92,10 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CONTA_001", "ContabilidadReportes", new { Area = "Reportes", IdTipoCbte = DataBinder.Eval(c.DataItem, "IdTipoCbte").ToString(), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                if (DataBinder.Eval(c.DataItem, "IdCbteCble") != null)
+                {
+                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CONTA_001", "ContabilidadReportes", new { Area = "Reportes", IdTipoCbte = DataBinder.Eval(c.DataItem, "IdTipoCbte").ToString(), IdCbteCble = DataBinder.Eval(c.DataItem, "IdCbteCble").ToString() }, Request.Url.Scheme) + "');\"></span>");
+                }
             });
             column.Width = Unit.Percentage(10);
         });
