--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Nuevo.cshtml
@@ -97,6 +97,8 @@
         $("#IdPeriodo").change(function () {
             Get_list_activos_a_depreciar();
         });
+
+        Get_list_activos_a_depreciar();
     });
     function Get_list_activos_a_depreciar() {
         var periodo = $("#IdPeriodo").val();
