--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Index.cshtml
@@ -6,7 +6,7 @@
         Response.Redirect("~/Account/Login");
     }
 }
-
+<script src="~/Scripts/ScriptsGenerales.js"></script>
 @using (Html.BeginForm())
 {
 
