--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_002.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_002.cshtml
@@ -12,6 +12,6 @@
     {
         settings.MobileMode = false;
         settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml();
+    }).Bind(Model).GetHtml()
 }
 
