--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_001.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/ActivoFijoReportes/ACTF_001.cshtml
@@ -12,5 +12,5 @@
     {
         settings.MobileMode = false;
         settings.Name = "webDocumentViewer";
-    }).Bind(Model).GetHtml()
+    }).Bind(Model).GetHtml();
 }
