--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/_GridViewPartial_depreciacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/_GridViewPartial_depreciacion_det.cshtml
@@ -7,23 +7,84 @@
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
 
-        settings.CommandColumn.Visible = false;
-
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+        //Configuración scrolling y pager
+        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
+        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+        settings.Settings.VerticalScrollableHeight = 400;
+        settings.SettingsPager.Visible = true;
+        settings.SettingsPager.PageSize = 10;
+        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
+        settings.SettingsPager.AlwaysShowPager = true;
+        //Configuración filtro por columna
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //Configuracion exportacion
+        settings.SettingsExport.EnableClientSideExportAPI = true;
+        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
+        settings.Toolbars.Add(t =>
+        {
+            t.EnableAdaptivity = false;
+            t.Items.Add(GridViewToolbarCommand.ExportToPdf);
+            t.Items.Add(GridViewToolbarCommand.ExportToXls);
+            t.Items.Add(GridViewToolbarCommand.ExportToXlsx);
+            t.Items.Add(GridViewToolbarCommand.ExportToDocx);
+            t.Items.Add(GridViewToolbarCommand.ExportToRtf);
+            t.Items.Add(GridViewToolbarCommand.ExportToCsv);
+        });
+        settings.SettingsExport.RenderBrick = (sender, e) =>
+        {
+            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
+                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
+        };
 
-
-        settings.Columns.Add("nom_tipo","Tipo").Width = Unit.Percentage(20);
-        settings.Columns.Add("nom_categoria","Categoría").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "nom_tipo";
+            column.Caption = "Tipo";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 0;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "nom_categoria";
+            column.Caption = "Categoría";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 1;
+        });
         settings.Columns.Add("Af_Nombre","Activo").Width = Unit.Percentage(30);
-        settings.Columns.Add("Valor_Compra","Valor compra").Width = Unit.Percentage(10);
-        settings.Columns.Add("Valor_Depreciacion","Valor depreciación").Width = Unit.Percentage(10);
-        settings.Columns.Add("Valor_Depre_Acum","Valor depr. acumulada").Width = Unit.Percentage(10);
+        settings.Columns.Add("Valor_Compra","Valor compra").Width = Unit.Percentage(5);
+        settings.Columns.Add("Valor_Depreciacion","Valor depreciación").Width = Unit.Percentage(5);
+        settings.Columns.Add("Valor_Depre_Acum","Valor depr. acumulada").Width = Unit.Percentage(5);
+
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Count, "Af_Nombre").DisplayFormat = "Conteo: {0:##}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor_Depreciacion").DisplayFormat = "Total {0:c2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor_Depre_Acum").DisplayFormat = "Depr. Acum. {0:c2}";
+        settings.Settings.ShowFooter = true;
+
+
+        settings.GroupSummary.Add(DevExpress.Data.SummaryItemType.Count, "Af_Nombre").DisplayFormat = "Conteo: {0:##}";
+        settings.GroupSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor_Depreciacion").DisplayFormat = "Depr. {0:c2}";
+        settings.GroupSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor_Depre_Acum").DisplayFormat = "Depr. Acum. {0:c2}";        
+
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
+
+        settings.BeforeGetCallbackResult = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
+
     });
 }
 @grid.Bind(Model.lst_detalle).GetHtml()
